# bioinformatic_tools

./: .gitignore  Dockerfile  README.md  README_EN.md  docker-compose.yml  flake.nix  requirements-web.txt
docs/: README.md
primer-evaluation/: pyproject.toml  requirements.txt
primer-evaluation/src/primer_eval/: cli.py  validator.py
primer-evaluation/tests/: __init__.py  test_validator.py
primer-evaluation/web/: __init__.py
primer-evaluation/web/services/: analysis.py
scripts/: nix-flake-update.sh
src/primer_eval/: __init__.py
visualize_tfbs/: README.md  flake.nix  tfbs_config.yaml.example  visualize_tfbs.R
visualize_tfbs/web/: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  flake.nix
visualize_tfbs/web/static/: app.js  index.html  style.css
web/: config.py  main.py
web/api/: routes.py
web/models/: database.py
web/templates/: index.html
