[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "primer-eval"
version = "1.0.0"
description = "DNA primer pair evaluation tool based on primer3-py"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["primer3-py>=1.0.0"]

[project.optional-dependencies]
web = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "apscheduler>=3.10.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
]

[project.scripts]
primer-eval = "primer_eval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
